Add post_prediccion endpoint with updated swagger
